--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+
+.ring {
+  position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	border-radius:50%;
+	border:1px solid #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.line {
+  height:.5px;
+  background-color:#fff;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform-origin:top left;
+  z-index:0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tags-wrapper {
+  position:absolute;
+  transform-origin:center;
+  transform:translate(-50%, -50%);
+  top:50%;
+  left:50%;
+  z-index:400;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tags {
+  position:relative;
+  transform-origin:center;
+  font-family:Helvetica;
+  color: #777;
+  font-size: 80%;
+  font-weight:bold;
+  width:80px;
+  z-index:400;
 }
 
-.App-link {
-  color: #61dafb;
+.tags b {
+  font-size:120%;
+  color:#111;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.align-right {
+  text-align:right;
+}
+
+.align-center {
+  text-align:center;
 }
